[package]
name = "tp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.29"
rand = "0.8.4"
serde = { version = "1.0.192", features = ["derive", "std"] }
serde_json = "1.0.108"
serde_plain = "1.0.2"
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"

[[bin]]
name="ecommerce"
path="src/bin/ecommerce.rs"
